Continuación entrega final
USUARIO
- HISTORIAL HISTORICO - OK
- SI NO HAY BICI, ¿PUEDO RETIRAR? - OK PROBAR Y             PONER
MENSAJE DE EXITO O ERROR
CREO UN REGISTRO O MODIFICO UNO QUE NO EXISTE ? (METODO
RETIRARBICICLETA-PERSONABEAN)
- SI NO HAY ESTACIONAMIENTO, ¿PUEDO ESTACIONAR? - OK PROBAR Y
PONER MENSAJE DE ERROR
PROBAR SI ANDA EL WATERMARK DE LA DENUNCIA - OK

cuando devolves la bicicleta si esta rota o lo que sea , no va a estar
disponible - OK
si la bicicleta tiene una denuncia, no tiene que aparecer en la lista de
bicicletas disponibles - OK
-> Si el tipo no pone nada en el campo, no es denuncia ! OK
-> cuando el administrador la pone apta para el uso, ahi recien puede
pasar a estar disponible
-> sin embargo va a ocupar un estacionamiento  - OK

- SI DEVUELVO EN LA MISMA ESTACION SE ROMPE - OK             SACAR LA
EST DE ENTRADA  (PONE NULL)

ADMINISTRADOR
- HISTORIAL HISTORICO Y ACTIVO DE USUARIOS - OK
¿Que informacion del usuario debo mostrar? ¿Solo el nombre de usuario y
que de ultima lo busque en la lista?
Muestro todo, el campo estado, muestra "TRUE". Capaz no hace falta
mostrarlo no ?
¿Que pasa con los usuarios que estan eliminados, mostramos los
alquileres?

- MODIFICAR BICICLETA - OK
- cuando se modifica la bici, y se la pone en otra estación, tengo que
cambiarla de lista y chequear que haya lugar y demas
tambien ver que no se ponga la misma patente
- cambio de estacion no anda
- chequear que cuando devuelve la bici agrega el estado denunciada al
historial -

--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAdministracionBicicletas.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAdministracionBicicletas.xhtml
@@ -100,10 +100,10 @@
 					<h:outputText value="Ubicacion actual: " />
 					<!-- 						<h:inputText value="#{BicicletaBean.bicicletaSeleccionada.ubicacionActual}"/> -->
 					<p:selectOneMenu required="true" id="estacion"
-						value="#{BicicletaBean.bicicleta.ubicacionActual}"
+						value="#{BicicletaBean.ubicacion_nueva}"
 						style="width:150px">
 						<!-- <f:selectItem itemLabel="Seleccionar" itemValue="" noSelectionOption="true" /> -->
-						<f:selectItems value="#{EstacionBean.estacionesNoEliminadasMap}" />
+						<f:selectItems value="#{EstacionBean.estacionesModificar(BicicletaBean.bicicletaSeleccionada)}" />
 					</p:selectOneMenu>
 
 					<h:outputText value="Estado actual: " />
