--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAdministracionAlquileresHistoricos.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAdministracionAlquileresHistoricos.xhtml
@@ -79,10 +79,10 @@
 				<h:outputText value="#{alquiler.estacionSalida.nombre}" />
 			</p:column>
 			
-			<p:column filterBy="#{alquiler.estacionEntrada.nombre}"
+			<p:column filterBy="#{alquiler.nombreEstacionEntrada}"
 				headerText="Estacion de entrada" filterMatchMode="contains"
-				sortBy="#{alquiler.estacionEntrada.nombre}">
-				<h:outputText value="#{alquiler.estacionEntrada.nombre}" />
+				sortBy="#{alquiler.nombreEstacionEntrada}">
+				<h:outputText value="#{alquiler.nombreEstacionEntrada}" />
 			</p:column>	
 			
 			<p:column filterBy="#{alquiler.usuarioUso.email}"
@@ -153,9 +153,7 @@
 						<f:convertDateTime pattern="dd/MM/yy" />
 					</p:calendar> -->
 
-					<h:outputText value="Estado" />
-					<h:outputText value="#{PersonaBean.usuarioSeleccionado.habilitado}" />
-					
+				
 					<!-- <p:selectOneRadio
 						value="#{PersonaBean.usuarioSeleccionado.habilitado}"
 						required="true">
