--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyEstacionGenericaUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyEstacionGenericaUsuario.xhtml
@@ -7,47 +7,66 @@
     <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <style type="text/css">
-	.form .ui-button-text {
-		color: white !important;
-		font: 16px sans-serif;
-		background-color: #5CB85C !important;
-	}
-	
-	.form .ui-panelgrid tr, .ui-panelgrid td {
-		border: 0px !important;		
-	}
-	
+
+.styleGreen {
+	color: white;
+	background-color: #178501;
+	font: 16px sans-serif;
+	padding: 10px;
+	border-radius: 8px;
+	border-color: #178501;
+}
+
+.ui-button-text {
+	color: white !important;
+	font: 16px sans-serif;
+	background-color: #5CB85C !important;
+}
+
+.ui-button {
+	background-color: #5CB85C !important;
+	border-color: #5CB85C !important;
+}
+
+.ui-panelgrid tr, .ui-panelgrid td {
+	border: 0px !important;
+	border-radius: 8px;
+	border-color: #5CB85C !important;
+}
 </style>
 
 
 </h:head>
 <h:body>
 
-	<p:layout style="min-width:400px;min-height:200px;">
-		<p:layoutUnit position="center">
-			<h:outputText value="Nombre de estacion: "></h:outputText>
-			<h:outputText value="#{EstacionBean.estacionSeleccionada.nombre}">
-			</h:outputText>
-			<p:separator></p:separator>
-			<h:outputText value="Bicicletas disponibles: "></h:outputText>
-			<h:outputText
-				value="#{EstacionBean.estacionSeleccionada.cantBiciDisponible}">
-			</h:outputText>
-			<p:separator></p:separator>
-			<h:outputText value="Estacionamientos disponibles:  "></h:outputText>
-			<h:outputText 
-				value="#{EstacionBean.estacionSeleccionada.cantEstacionamientoLibre}">
-			</h:outputText>
-			<h:form>
-			<p:commandButton value="Retirar" ajax="false"
+
+
+<p:panelGrid columns="1" style="position:relative; height: 200px;margin:auto;">
+		<f:facet  name="header">
+			<div class="styleGreen">Informacion sobre Estacion</div>
+		</f:facet>
+
+		<h:form >
+			<h:panelGrid columns="2" cellpadding="5">
+				<p:outputLabel for="nombEst" value="Nombre de Estacion:"/>
+				<h:outputText  id="nombEst" value="#{EstacionBean.estacionSeleccionada.nombre}" />
+			
+				<p:outputLabel for="biciDisp" value="Bicicletas disponibles:" />
+				<h:outputText id="biciDisp" value="#{EstacionBean.estacionSeleccionada.cantBiciDisponible}" />
+
+				<p:outputLabel for="estDisp" value="Estacionamientos disponibles:" />
+				<h:outputText id="estDisp" value="#{EstacionBean.estacionSeleccionada.cantEstacionamientoLibre}" />
+				
+				<f:facet name="footer">
+					<div align="center">
+						<p:commandButton value="Retirar" ajax="false"
 							action="#{PersonaBean.retirarBicicleta(EstacionBean.estacionSeleccionada)}"
 							icon="ui-icon-check" style="width: 300px;margin:auto;"
 							validateClient="true"  />
-			</h:form>
-		</p:layoutUnit>
-	</p:layout>
-
-
-
+					</div>
+				</f:facet>
+			</h:panelGrid>
+		</h:form>
+	</p:panelGrid>
 </h:body>
 </html>
